Move call to syncDataAndTruncateJournal higher in repair SERVER-5393

Previously we could have exited with the journal reffering to files that
had been deleted. By truncating the journal earlier we can avoid that.
The call to flushAll was also moved to make intent clearer to future
maintainers.